feature: follow/unfollow user routes/controllers/store functions added & code updated
